Fixed dict flattening/unflattening scheme to fix trench crop keys in zarr and will make it easier to swap in zarr-on-disk for in-memory result of get_trench_crops in _measure function.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/181024 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/181024 Burst analysis.ipynb
@@ -444,8 +444,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# selected_frames = all_frames.loc[IDX[:,:20,:,:2],:]\n",
-    "selected_frames = all_frames.loc[IDX[:, :, :, :], :]"
+    "selected_frames = all_frames.loc[IDX[:, :1, :, :2], :]\n",
+    "# selected_frames = all_frames.loc[IDX[:,:,:,:],:]"
    ]
   },
   {
@@ -552,6 +552,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: make _measure handle reading trench crops from zarr: trench_images[t]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def _measure(\n",
     "    trenches,\n",
     "    frames,\n",
@@ -578,33 +587,43 @@
     "        filename=filename,\n",
     "        position=position,\n",
     "    )\n",
-    "    flattened_crops = {\n",
-    "        (*k[0], *k[1:]): v\n",
-    "        for k, v in util.flatten_dict(trench_crops).items()\n",
-    "        if k[0] != \"_frame\"\n",
-    "    }\n",
+    "    # flattened_crops = {(*k[0], *k[1:]): v for k, v in util.flatten_dict(trench_crops).items() if k[0] != '_frame'}\n",
+    "    # flattened_crops = {k: v for k, v in util.flatten_dict(trench_crops).items() if k[0] != '_frame'}\n",
+    "    # print('trenches>',list(trench_crops[1][92]['YFP'].keys()))\n",
+    "    # print('trenches>',list(trench_crops[(1,92)]['MCHERRY'].keys()))\n",
+    "    # print('trenches only>',list(flattened_crops.keys()))\n",
+    "    # 0/0\n",
     "    res = {}\n",
     "    segmentation_masks = {}\n",
     "    measurements = {}\n",
     "    # segment\n",
-    "    for (trench_set, trench_idx, channel, t), crop in flattened_crops.items():\n",
-    "        if measure_channels is not None and channel not in measure_channels:\n",
+    "    for trench_set, crops_trench_channel_t in trench_crops.items():\n",
+    "        if trench_set == \"_frame\":\n",
     "            continue\n",
-    "        segmentation_key = (trench_set, trench_idx, segmentation_channel, t)\n",
-    "        segmentation_mask = segmentation_masks.get(segmentation_key, None)\n",
-    "        if segmentation_mask is None and segmentation_func is not None:\n",
-    "            segmentation_mask = segmentation_func(flattened_crops[segmentation_key])\n",
-    "            segmentation_masks[segmentation_key] = segmentation_mask\n",
-    "            # measure mask\n",
-    "            if measurement_func is not None:\n",
-    "                measurements[(\"mask\", (trench_set, trench_idx, t))] = measurement_func(\n",
-    "                    segmentation_mask, None\n",
-    "                )\n",
-    "        # measure\n",
-    "        if measurement_func is not None:\n",
-    "            measurements[(channel, (trench_set, trench_idx, t))] = measurement_func(\n",
-    "                segmentation_mask, crop\n",
-    "            )\n",
+    "        for trench_idx, crops_channel_t in crops_trench_channel_t.items():\n",
+    "            for channel, crops_t in crops_channel_t.items():\n",
+    "                for t, crop in crops_t.items():\n",
+    "                    if measure_channels is not None and channel not in measure_channels:\n",
+    "                        continue\n",
+    "                    segmentation_key = (trench_set, trench_idx, segmentation_channel, t)\n",
+    "                    segmentation_mask = segmentation_masks.get(segmentation_key, None)\n",
+    "                    if segmentation_mask is None and segmentation_func is not None:\n",
+    "                        segmentation_mask = segmentation_func(\n",
+    "                            trench_crops[trench_set][trench_idx][segmentation_channel][\n",
+    "                                t\n",
+    "                            ]\n",
+    "                        )\n",
+    "                        segmentation_masks[segmentation_key] = segmentation_mask\n",
+    "                        # measure mask\n",
+    "                        if measurement_func is not None:\n",
+    "                            measurements[\n",
+    "                                (\"mask\", (trench_set, trench_idx, t))\n",
+    "                            ] = measurement_func(segmentation_mask, None)\n",
+    "                    # measure\n",
+    "                    if measurement_func is not None:\n",
+    "                        measurements[\n",
+    "                            (channel, (trench_set, trench_idx, t))\n",
+    "                        ] = measurement_func(segmentation_mask, crop)\n",
     "    if measurement_func is not None:\n",
     "        measurement_dfs = util.map_dict_levels(\n",
     "            lambda k: (k[1], k[0], *k[2:]), measurements\n",
@@ -771,6 +790,51 @@
     "        return None\n",
     "    else:\n",
     "        return res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "do_measure_and_write(\n",
+    "    trench_subset,\n",
+    "    all_frames.loc[IDX[:, :2, :, :20], :],\n",
+    "    measurement_func=_measurement_func,\n",
+    "    write=True,\n",
+    "    return_none=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = zarr.open_group(\n",
+    "    store=zarr.LMDBStore(\n",
+    "        \"/n/scratch2/jqs1/fidelity/all/180928_txnerr_bigsnake.stripe-1.256m.nd2.images/pos2.zarr\"\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root.tree()"
    ]
   },
   {
@@ -1367,6 +1431,40 @@
    "outputs": [],
    "source": [
     "trench_subset = trenches.loc[slc, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_frames.index.names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = processing._get_trench_crops(\n",
+    "    trench_subset,\n",
+    "    all_frames.loc[IDX[:, 2, :, :2], :],\n",
+    "    include_frame=True,\n",
+    "    frame_transformation=None,\n",
+    "    filename=\"/n/scratch2/jqs1/fidelity/all/180928_txnerr_bigsnake.stripe-1.256m.nd2\",\n",
+    "    position=2,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "util.flatten_dict(util.unflatten_dict(a))"
    ]
   },
   {
