Gracefully handle calculating bboxes for only one trench per trench set by setting bounds to NaN.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/181024 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/181024 Burst analysis.ipynb
@@ -203,7 +203,7 @@
    "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
-    "    walltime=\"04:00:00\",\n",
+    "    walltime=\"06:00:00\",\n",
     "    # job_extra=['-p transfer'],\n",
     "    # job_extra=['--cores-per-socket=8'],\n",
     "    # job_extra=['--exclude=compute-e-16-181,compute-e-16-186'],\n",
@@ -326,11 +326,27 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "frame = workflow.get_nd2_frame(**frame_stream.contents)\n",
+    "# key = frame_stream.contents\n",
+    "key = (\n",
+    "    \"/n/scratch2/jqs1/fidelity/all/180928_txnerr_bigsnake.stripe-1.256m.nd2\",\n",
+    "    35,\n",
+    "    \"MCHERRY\",\n",
+    "    0,\n",
+    ")\n",
+    "frame = workflow.get_nd2_frame(*key)\n",
     "find_trenches_diag = diagnostics.wrap_diagnostics(\n",
-    "    trench_detection.find_trenches, ignore_exceptions=False, pandas=True\n",
+    "    trench_detection.find_trenches, ignore_exceptions=False, pandas=False\n",
     ")\n",
     "trench_points, trench_diag, trench_err = find_trenches_diag(frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.show_plot_browser(trench_diag)"
    ]
   },
   {
@@ -444,8 +460,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_frames = all_frames.loc[IDX[:, :1, :, :2], :]\n",
-    "# selected_frames = all_frames.loc[IDX[:,:,:,:],:]"
+    "# selected_frames = all_frames.loc[IDX[:,:1,:,:2],:]\n",
+    "selected_frames = all_frames.loc[IDX[:, :, :, :], :]"
    ]
   },
   {
@@ -482,6 +498,7 @@
     "            <= 1\n",
     "        )\n",
     "    ]\n",
+    "    # TODO: filter based on minimum trench length\n",
     "    return good_trenches"
    ]
   },
@@ -544,15 +561,6 @@
    "metadata": {},
    "source": [
     "#### Boilerplate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: make _measure handle reading trench crops from zarr: trench_images[t]"
    ]
   },
   {
@@ -680,6 +688,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
+    "tt = do_trenches_to_bboxes(\n",
+    "    t, (\"/n/scratch2/jqs1/fidelity/all/180928_txnerr_bigsnake.stripe-1.256m.nd2\", 35)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def _trench_diag_to_dataframe(trench_diag, sep=\".\"):\n",
     "    df = trench_diag.to_frame().T\n",
     "    expanded_df = diagnostics.expand_diagnostics_by_label(df)\n",
@@ -712,7 +741,8 @@
     "\n",
     "def _trenches_to_bboxes(trenches, image_limits):\n",
     "    trench_bboxes = workflow.get_trench_bboxes(trenches, image_limits)\n",
-    "    trenches = pd.concat([trenches, trench_bboxes], axis=1)\n",
+    "    if trench_bboxes is not None:\n",
+    "        trenches = pd.concat([trenches, trench_bboxes], axis=1)\n",
     "    return trenches\n",
     "\n",
     "\n",
@@ -796,51 +826,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "do_measure_and_write(\n",
-    "    trench_subset,\n",
-    "    all_frames.loc[IDX[:, :2, :, :20], :],\n",
-    "    measurement_func=_measurement_func,\n",
-    "    write=True,\n",
-    "    return_none=True,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "root = zarr.open_group(\n",
-    "    store=zarr.LMDBStore(\n",
-    "        \"/n/scratch2/jqs1/fidelity/all/180928_txnerr_bigsnake.stripe-1.256m.nd2.images/pos2.zarr\"\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "root.tree()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Execute"
    ]
   },
@@ -854,6 +839,8 @@
     "all_analysis_futures = {}\n",
     "save_trenches_futures = {}\n",
     "save_trench_err_futures = {}\n",
+    "\n",
+    "all_trench_bboxes_futures = {}  # TODO: just for debugging\n",
     "\n",
     "for filename, filename_frames in selected_frames.groupby(\"filename\"):\n",
     "    # analysis_futures = {}\n",
@@ -872,6 +859,7 @@
     "            do_trenches_to_bboxes, trenches_future, (filename, position), priority=10\n",
     "        )\n",
     "        trench_bboxes_futures[key] = trench_bboxes_future\n",
+    "        all_trench_bboxes_futures[key] = trench_bboxes_future\n",
     "        analysis_future = client.submit(\n",
     "            do_measure_and_write,\n",
     "            trench_bboxes_future,\n",
@@ -908,7 +896,74 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "util.apply_map_futures(\n",
+    "    client.gather, trench_bboxes_futures, predicate=lambda x: x.status == \"error\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.restart()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "t = do_find_trenches(\n",
+    "    \"/n/scratch2/jqs1/fidelity/all/180928_txnerr_bigsnake.stripe-1.256m.nd2\",\n",
+    "    35,\n",
+    "    \"MCHERRY\",\n",
+    "    0,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t[1][\"label_1.find_trench_lines.hough_2.peak_func.pitch\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "tt = do_trenches_to_bboxes(\n",
+    "    t, (\"/n/scratch2/jqs1/fidelity/all/180928_txnerr_bigsnake.stripe-1.256m.nd2\", 35)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.gather(save_trenches_futures)"
+   ]
   },
   {
    "cell_type": "code",
