--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/181004 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/181004 Prototyping.ipynb
@@ -226,10 +226,11 @@
     "main_cell = chip(\n",
     "    \"Big Snake\",\n",
     "    snake,\n",
-    "    split=(7, 13, 17, 27, 5),\n",
-    "    feeding_channel_width=65,\n",
+    "    split=4,\n",
+    "    feeding_channel_width=40,\n",
     "    trench_spacing=1,\n",
-    "    lane_gap=17,\n",
+    "    lane_gap=10,\n",
+    "    trench_width=1.4,\n",
     "    draw_trenches=False,\n",
     "    metadata=metadata,\n",
     ")\n",
@@ -280,27 +281,30 @@
     "from snakenmake import *\n",
     "\n",
     "metadata = {}\n",
+    "params = [\n",
+    "    dict(split=4, fc=40, w=1.4, ts=1.6, lg=10),\n",
+    "    dict(split=4, fc=40, w=1.4, ts=1.1, lg=10),\n",
+    "    dict(split=4, fc=40, w=1.4, ts=1.1, lg=10),\n",
+    "    dict(split=8, fc=40, w=1.4, ts=1.6, lg=10),\n",
+    "    dict(split=8, fc=40, w=1.4, ts=1.1, lg=10),\n",
+    "    dict(split=8, fc=40, w=1.4, ts=1.1, lg=10),\n",
+    "]\n",
     "chips = [\n",
     "    chip(\n",
-    "        \"Big Snake S3 FC{fc} L35 W{w} TS{ts} LG{lg}\".format(fc=fc, w=w, ts=ts, lg=lg),\n",
+    "        \"Big Snake S{split} FC{fc} L35 W{w} TS{ts} LG{lg}\".format(**params),\n",
     "        snake,\n",
-    "        split=3,\n",
-    "        feeding_channel_width=fc,\n",
-    "        trench_spacing=ts,\n",
-    "        trench_width=w,\n",
-    "        lane_gap=lg,\n",
+    "        split=params[\"split\"],\n",
+    "        feeding_channel_width=params[\"fc\"],\n",
+    "        trench_spacing=params[\"ts\"],\n",
+    "        lane_gap=params[\"lg\"],\n",
     "        tick_labels=False,\n",
     "        text=True,\n",
     "        draw_trenches=True,\n",
     "        metadata=metadata,\n",
     "    )\n",
-    "    for (fc, lg, w, ts) in zip(\n",
-    "        (90, 90, 90, 90, 45, 45),\n",
-    "        (20, 20, 20, 20, 17, 17),\n",
-    "        (1.5, 1.5, 1.3, 1.3, 1.5, 1.3),\n",
-    "        (2, 1.5, 2.2, 1.7, 2, 2.2),\n",
-    "    )\n",
+    "    for params in params\n",
     "]\n",
+    "main_cell = wafer(chips, \"Big Snakes \\n BS/JQS 181001\", text=True)\n",
     "# write_gds(main_cell, 'bigsnakes5_noticklabels.gds')"
    ]
   },
@@ -310,65 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "from snakenmake import *\n",
-    "\n",
-    "metadata = {}\n",
-    "main_cell = wafer(\n",
-    "    [\n",
-    "        chip(\n",
-    "            \"Big Snake S3 FC{fc} L35 W{w} TS{ts} LG{lg}\".format(\n",
-    "                fc=fc, w=w, ts=ts, lg=lg\n",
-    "            ),\n",
-    "            snake,\n",
-    "            split=3,\n",
-    "            feeding_channel_width=fc,\n",
-    "            trench_spacing=ts,\n",
-    "            trench_width=w,\n",
-    "            lane_gap=lg,\n",
-    "            tick_labels=False,\n",
-    "            text=True,\n",
-    "            draw_trenches=True,\n",
-    "            metadata=metadata,\n",
-    "        )\n",
-    "        for (fc, lg, w, ts) in zip(\n",
-    "            (90, 90, 90, 90, 45, 45),\n",
-    "            (20, 20, 20, 20, 17, 17),\n",
-    "            (1.5, 1.5, 1.3, 1.3, 1.5, 1.3),\n",
-    "            (2, 1.5, 2.2, 1.7, 2, 2.2),\n",
-    "        )\n",
-    "    ],\n",
-    "    \"Big Snakes \\n BS/JQS 180513\",\n",
-    "    text=True,\n",
-    ")\n",
-    "# write_gds(main_cell, 'bigsnakes5_noticklabels.gds')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_cell(chips[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!du -hs bigsnakes4_noticklabels.gds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!du -hs bigsnakes4_notext.gds"
+    "plot_cell(chips[5])"
    ]
   },
   {
@@ -378,36 +324,6 @@
    "outputs": [],
    "source": [
     "metadata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "from snakenmake import *\n",
-    "\n",
-    "metadata = {}\n",
-    "main_cell = wafer(\n",
-    "    [\n",
-    "        chip(\n",
-    "            \"Big Snake S3 FC{fc} L35 W1.5 TS{ts} LG20\".format(fc=fc, ts=ts),\n",
-    "            snake,\n",
-    "            split=3,\n",
-    "            feeding_channel_width=fc,\n",
-    "            trench_spacing=ts,\n",
-    "            draw_trenches=True,\n",
-    "            tick_labels=False,\n",
-    "            metadata=metadata,\n",
-    "        )\n",
-    "        for fc in (90,)\n",
-    "        for ts in (1, 1.5, 2)\n",
-    "    ],\n",
-    "    \"Big Snakes Backup \\n BS/JQS 180513\",\n",
-    ")\n",
-    "write_gds(main_cell, \"bigsnakes3backup.gds\")"
    ]
   },
   {
