Switched side for inlet/outlets. First inlet is now in upper left of chip, looking down at chip from above after it is cast.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/181115 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/181115 Prototyping.ipynb
@@ -139,7 +139,7 @@
     "    )\n",
     "    for params in params\n",
     "]\n",
-    "main_cell = wafer(chips, \"Basilisk \\n BS/JQS 181115\", text=True)\n",
+    "main_cell = wafer(chips, \"Basilisk \\n BS/JQS 181115\", text=True, mask=True)\n",
     "# write_gds(main_cell, '181115basilisk.gds')"
    ]
   },
@@ -159,15 +159,6 @@
    "outputs": [],
    "source": [
     "plot_cell(chips[5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metadata"
    ]
   },
   {
