--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/181115 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/181115 Prototyping.ipynb
@@ -139,8 +139,18 @@
     "    )\n",
     "    for params in params\n",
     "]\n",
+    "chips = []\n",
     "main_cell = wafer(chips, \"Basilisk \\n BS/JQS 181115\", text=True, mask=True)\n",
     "# write_gds(main_cell, '181115basilisk.gds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_cell(main_cell)"
    ]
   },
   {
