Mask alignment marks, right before using in cleanroom.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/181115 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/181115 Prototyping.ipynb
@@ -139,9 +139,9 @@
     "    )\n",
     "    for params in params\n",
     "]\n",
-    "chips = []\n",
+    "# chips = []\n",
     "main_cell = wafer(chips, \"Basilisk \\n BS/JQS 181115\", text=True, mask=True)\n",
-    "# write_gds(main_cell, '181115basilisk.gds')"
+    "write_gds(main_cell, \"181115basilisk.gds\")"
    ]
   },
   {
@@ -151,6 +151,15 @@
    "outputs": [],
    "source": [
     "plot_cell(main_cell)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_cell(snakenmake.mask_alignment_cross())"
    ]
   },
   {
