Fixed chip memoization, non-alphanumeric characters in cell names, minor cleanup.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/181115 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/181115 Prototyping.ipynb
@@ -126,22 +126,25 @@
     "]\n",
     "chips = [\n",
     "    chip(\n",
-    "        \"Big Snake S{split} FC{fc} L35 W{w} TS{ts} LG{lg}\".format(**params),\n",
+    "        \"Basilisk S{split} FC{fc} L35 W{w} TS{ts} LG{lg}\".format(**params),\n",
     "        snake,\n",
     "        split=params[\"split\"],\n",
     "        feeding_channel_width=params[\"fc\"],\n",
     "        trench_spacing=params[\"ts\"],\n",
     "        lane_gap=params[\"lg\"],\n",
     "        tick_labels=False,\n",
+    "        ticks=True,\n",
+    "        tick_length=4,\n",
+    "        tick_margin=3,\n",
     "        text=True,\n",
     "        draw_trenches=True,\n",
     "        metadata=metadata,\n",
     "    )\n",
     "    for params in params\n",
     "]\n",
-    "# chips = []\n",
+    "# chips = [chips[0]]*6\n",
     "main_cell = wafer(chips, \"Basilisk \\n BS/JQS 181115\", text=True, mask=True)\n",
-    "write_gds(main_cell, \"181115basilisk.gds\")"
+    "write_gds(main_cell, \"181116basilisk.gds\")"
    ]
   },
   {
