--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/Kymograph_v1.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/Kymograph_v1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Parallelizing the kymograph code (with dask)\n",
+    "#### Makeing the Kymograph Code Interactive\n",
     "\n",
     "Xref: Journal/10_15_18/generate_kymograph.ipynb\n",
     "\n",
@@ -25,6 +25,8 @@
     "import seaborn as sns\n",
     "import scipy.signal\n",
     "import shutil\n",
+    "import skimage as sk\n",
+    "from skimage import filters\n",
     "\n",
     "import dask\n",
     "from dask.distributed import Client, progress\n",
@@ -39,15 +41,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that I understand what is going on generally, here I start rewriting Suyang's kymograph code, outlined briefly here:\n",
-    "\n",
-    "0. Drift correct (to be added later)\n",
-    "1. Overlay the first 50 frames\n",
-    "2. Take 85th percentile intensity value from each row (or take mean)\n",
-    "3. Find the \"top\" (i.e. trench end) peak for trenches.\n",
-    "4. Use in combination with known length (free parameter) to crop out top and bottom\n",
-    "5. Repeat (2) along columns. Find midpoints of trenches.\n",
-    "6). Crop out fixed length around midpoints."
+    "#### Note: \n",
+    " - Really need to time optimize this code. The read/write is killing me at one part...Doesn't cause a problem in the non hdf5 version...\n",
+    " - generalize to have any number of trenches/lanes\n",
+    " - Also, a way of handling the metadata would be nice...\n",
+    " - maybe I can replace the background thresholding with otsu's method? other similar things?"
    ]
   },
   {
@@ -74,19 +72,17 @@
     "        y_percentile=85,\n",
     "        y_time_percentile=85,\n",
     "        smoothing_kernel_y=(9, 3),\n",
-    "        y_threshold_bins=100,\n",
-    "        y_threshold_distance_bin_ratio=0.08,\n",
-    "        y_threshold_backup_percentile=70,\n",
+    "        triangle_nbins=50,\n",
     "        x_percentile=85,\n",
     "        background_kernel_x=301,\n",
     "        smoothing_kernel_x=9,\n",
-    "        x_threshold_bins=20,\n",
-    "        x_threshold_distance_bin_ratio=0.1,\n",
-    "        x_threshold_backup_percentile=60,\n",
+    "        otsu_nbins=50,\n",
     "    ):\n",
     "        \"\"\"The kymograph class is used to generate and visualize kymographs. The central function of this\n",
     "        class is the method 'generate_kymograph', which takes an hdf5 file of images from a single fov and\n",
     "        outputs an hdf5 file containing kymographs from all detected trenches.\n",
+    "\n",
+    "        TEMP_NOTE: * means should be tuned case by case after checking outputs. ** other change to be made\n",
     "\n",
     "        Args:\n",
     "            input_path (string): Path to the input hdf5 file.\n",
@@ -98,41 +94,31 @@
     "            will be created if it does not exist and overwrites any files that start in this\n",
     "            directory.\n",
     "            trench_len_y (int): Length from the end of the tenches to be used when cropping in the\n",
-    "            y-dimension.\n",
-    "            padding_y (int): Padding to be used when cropping in the y-dimension.\n",
-    "            trench_width_x (int): Width to be used when cropping in the x-dimension.\n",
+    "            y-dimension.*\n",
+    "            padding_y (int): Padding to be used when cropping in the y-dimension.*\n",
+    "            trench_width_x (int): Width to be used when cropping in the x-dimension.*\n",
     "            top_and_bottom (bool): Whether or not to look for top and bottom trenches, or only top.\n",
-    "            NOTE: will change this soon to be more flexible.\n",
+    "            NOTE: will change this soon to be more flexible.**\n",
     "            t_chunk (int): Time chunk to load into memory during computation. Inceasing this number\n",
-    "            will lead to faster processing, but will also increase memory load.\n",
+    "            will lead to faster processing, but will also increase memory load.*\n",
     "\n",
     "            All entries below should not be tuned except in special cases...\n",
     "\n",
     "            y_percentile (int): Used for reducing signal in xyt to only the yt dimension when cropping\n",
-    "            in the y-dimension.\n",
+    "            in the y-dimension.*\n",
     "            y_time_percentile (int): Used for reducing signal in yt dimension to only the y dimension\n",
-    "            when cropping in the y-dimension.\n",
+    "            when cropping in the y-dimension.*\n",
     "            smoothing_kernel_y (tuple): Two-entry tuple specifying a kernel size for smoothing out yt\n",
-    "            signal when cropping in the y-dimension.\n",
-    "            y_threshold_bins (int): Number of bins to be used when determining a threshold for trench\n",
-    "            detection in the y-dimension.\n",
-    "            y_threshold_distance_bin_ratio (float): Tunes the ratio between peak-to-peak distance and\n",
-    "            the resolution of the y thresholding histogram.\n",
-    "            y_threshold_backup_percentile (int): Backup percentile cutoff to be used when histogram-based\n",
-    "            thresholding in y fails.\n",
+    "            signal when cropping in the y-dimension.*\n",
+    "            triangle_nbins (int): Number of bins to use when applying the triangle method to y-dimension signal.\n",
     "\n",
     "            x_percentile (int): Used for reducing signal in xyt to only the xt dimension when cropping\n",
-    "            in the x-dimension.\n",
+    "            in the x-dimension.*\n",
     "            background_kernel_x (int): Kernel used for performing background subtraction on xt signal when\n",
-    "            cropping in the x-dimension.\n",
+    "            cropping in the x-dimension.*\n",
     "            smoothing_kernel_x (int): Kernel used for performing smoothing on xt signal when cropping\n",
-    "            in the x-dimension.\n",
-    "            x_threshold_bins (int): Number of bins to be used when determining a threshold for trench\n",
-    "            detection in the x-dimension.\n",
-    "            x_threshold_distance_bin_ratio (float): Tunes the ratio between peak-to-peak distance and\n",
-    "            the resolution of the x thresholding histogram.\n",
-    "            x_threshold_backup_percentile (int): Backup percentile cutoff to be used when histogram-based\n",
-    "            thresholding in x fails.\n",
+    "            in the x-dimension.*\n",
+    "            otsu_nbins (int): Number of bins to use when applying Otsu's method to x-dimension signal.\n",
     "\n",
     "        \"\"\"\n",
     "\n",
@@ -162,9 +148,7 @@
     "        ## parameters for threshold finding\n",
     "        self.y_time_percentile = y_time_percentile\n",
     "        self.smoothing_kernel_y = smoothing_kernel_y\n",
-    "        self.y_threshold_bins = y_threshold_bins\n",
-    "        self.y_threshold_distance_bin_ratio = y_threshold_distance_bin_ratio\n",
-    "        self.y_threshold_backup_percentile = y_threshold_backup_percentile\n",
+    "        self.triangle_nbins = triangle_nbins\n",
     "\n",
     "        #### params for x\n",
     "        ## parameter for reducing signal to one dim\n",
@@ -173,9 +157,7 @@
     "        self.background_kernel_x = background_kernel_x\n",
     "        self.smoothing_kernel_x = smoothing_kernel_x\n",
     "        ## parameters for threshold finding\n",
-    "        self.x_threshold_bins = x_threshold_bins\n",
-    "        self.x_threshold_distance_bin_ratio = x_threshold_distance_bin_ratio\n",
-    "        self.x_threshold_backup_percentile = x_threshold_backup_percentile\n",
+    "        self.otsu_nbins = otsu_nbins\n",
     "\n",
     "    def writedir(self, directory, overwrite=False):\n",
     "        \"\"\"Creates an empty directory at the specified location. If a directory is\n",
@@ -189,7 +171,8 @@
     "        \"\"\"\n",
     "        print(directory)\n",
     "        if overwrite:\n",
-    "            shutil.rmtree(directory)\n",
+    "            if os.path.exists(directory):\n",
+    "                shutil.rmtree(directory)\n",
     "            os.makedirs(directory)\n",
     "        else:\n",
     "            if not os.path.exists(directory):\n",
@@ -443,13 +426,11 @@
     "        y_time_percentile = np.percentile(\n",
     "            y_percentiles_smoothed, self.y_time_percentile, axis=1\n",
     "        )\n",
-    "        background_threshold = self.find_background_threshold(\n",
-    "            y_time_percentile,\n",
-    "            self.y_threshold_bins,\n",
-    "            self.y_threshold_distance_bin_ratio,\n",
-    "            self.y_threshold_backup_percentile,\n",
+    "\n",
+    "        triangle_threshold = sk.filters.threshold_triangle(\n",
+    "            y_time_percentile[:, np.newaxis], nbins=self.triangle_nbins\n",
     "        )\n",
-    "        trench_mask_y = y_percentiles_smoothed > background_threshold\n",
+    "        trench_mask_y = y_percentiles_smoothed > triangle_threshold\n",
     "\n",
     "        time_list = []\n",
     "        for t in range(trench_mask_y.shape[1]):\n",
@@ -575,13 +556,12 @@
     "        smooth_filtered = self.median_filter_1d(\n",
     "            background_filtered, self.smoothing_kernel_x\n",
     "        )\n",
-    "        background_threshold = self.find_background_threshold(\n",
-    "            smooth_filtered,\n",
-    "            self.x_threshold_bins,\n",
-    "            self.x_threshold_distance_bin_ratio,\n",
-    "            self.x_threshold_backup_percentile,\n",
+    "\n",
+    "        otsu_threshold = sk.filters.threshold_otsu(\n",
+    "            smooth_filtered[:, np.newaxis], nbins=self.otsu_nbins\n",
     "        )\n",
-    "        x_mask = smooth_filtered > background_threshold\n",
+    "        x_mask = smooth_filtered > otsu_threshold\n",
+    "\n",
     "        midpoints = self.get_midpoints_from_mask(x_mask)\n",
     "        return midpoints\n",
     "\n",
@@ -827,7 +807,7 @@
    "outputs": [],
    "source": [
     "data = h5py.File(\n",
-    "    \"/n/groups/paulsson/Daniel/Image_analysis_pipeline/kymographs/output/fov_1.hdf5\"\n",
+    "    \"/n/groups/paulsson/Daniel/Image_analysis_pipeline/kymographs/test_output.hdf5\"\n",
     ")"
    ]
   },
@@ -837,7 +817,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kymo.plot_kymograph(data[\"top/channel_RFP/20\"][:])"
+    "kymo.plot_kymograph(data[\"bottom/channel_RFP/11\"][:])"
    ]
   },
   {
